Sun Feb  8 23:28:05 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* include/ruby/st.h, st.c: order entries by a linked list instead of
	  a loop to fix iteration miss when hash is modified during iteration.
	  [ruby-dev:37910]

Sun Feb  8 23:22:35 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_peercred): new function to show
	  SO_PEERCRED socket option.

Sun Feb  8 22:44:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/rubysig.h (rb_thread_blocking_region_begin),
	  (rb_thread_blocking_region_end): marked as deprecated.

	* include/ruby/backward/rubysig.h (TRAP_BEG): fix for C++.  a
	  patch from Aman Gupta at [ruby-core:21934]

Sun Feb  8 21:47:50 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: check struct cmsgcred.

	* ext/socket/ancdata.c (anc_inspect_passcred_credentials): add
	  "(ucred)".
	  (anc_inspect_socket_creds): show struct cmsgcred too, for FreeBSD.

Sun Feb  8 21:05:35 2009  Tanaka Akira  <akr@fsij.org>

	* lib/drb/extservm.rb (DRb::ExtServManager#invoke_service_command):
	  detach spawned process.  [ruby-dev:37936]

Sun Feb  8 20:30:29 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: check struct sockcred.

	* ext/socket/ancdata.c (anc_inspect_socket_creds): new function to
	  show SCM_CREDS on NetBSD.

Sun Feb  8 19:05:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/rubysig.h: extern "C" was missing.
	  [ruby-core:21929]

Sun Feb  8 18:46:15 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_passcred_credentials): new
	  function to show SCM_CREDENTIALS on GNU/Linux.

Sun Feb  8 18:34:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_binread): ensures file path.  [ruby-dev:37940]

Sun Feb  8 13:52:02 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (init_unix_addrinfo): add socktype argument.
	  (addrinfo_initialize): follow init_unix_addrinfo change.
	  (addrinfo_s_unix): add optional argument: socktype
